# tree-sitter-ecosystem

./: .gitignore  README.md  flake.nix
zeta/: Cargo.toml  README.md  TODO.md  build.rs
zeta/src/: analyze.rs  extensions.rs  lib.rs  main.rs  scan.rs  types.rs
