[package]
name = "zeta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
typify = "0.2.0"
url = "2.5.4"
user_dirs = "0.2.0"

[build-dependencies]
prettyplease = "0.2.25"
reqwest = { version = "0.12.9", features = ["blocking"] }
schemars = "0.8.21"
serde_json = "1.0.133"
syn = "2.0.90"
typify = "0.2.0"
