[package]
name = "zeta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json_lenient = "0.2.4"
streaming-iterator = "0.1.9"
toml = "0.8.19"
tree-sitter = "0.24.3"
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query", version = "0.4.0", branch = "master" }
typify = "0.2.0"
url = "2.5.4"
user_dirs = "0.2.0"

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
schemars = "0.8.21"
serde_json = "1.0.133"
typify = "0.2.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
